# namesearchnew

./: .gitignore  GOALS.md  README.md  monitor-build.sh  troubleshooting_log.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-minimal.txt  requirements.txt  test_domain_monitor.py  test_domain_monitor_self_contained.py  test_domain_monitor_service_isolated.py  test_domain_service_simple.py
backend/migrations/: env.py
backend/migrations/versions/: 14e28220766a_initial_migration.py  5c8ba15c46e2_add_advanced_filter_fields_to_domain_.py
backend/namesearch/: __init__.py  main.py
backend/namesearch/api/: deps.py
backend/namesearch/core/: config.py  email.py  jwt.py  logging_config.py  password.py  rate_limiter.py  response.py  security.py  session.py
backend/namesearch/crud/: __init__.py  base.py  crud_domain.py  crud_notification.py  crud_project.py  crud_token.py  crud_user.py  domain_watch.py
backend/namesearch/db/: __init__.py  base.py  session.py
backend/namesearch/models/: __init__.py  base.py  domain.py  domain_watch.py  notification.py  project.py  token.py  user.py
backend/namesearch/schemas/: __init__.py  domain.py  domain_watch.py  notification.py  project.py  search.py  (+2 more)
backend/scripts/: create_domain_watches_table.py  migrate_domain_watches.py  test_domain_monitor.py  test_domain_service.py  test_domain_watch_api.py
backend/tests/: __init__.py  conftest.py  test_domain_monitoring.py  test_domain_search.py  test_main.py  test_utils.py
(+129 files in other folders)
